[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/objects/CutsceneAnimationPlayer/CutsceneAnimationPlayer.gd" type="Script" id=1]

[node name="CutsceneAnimationPlayer" type="AnimationPlayer"]
script = ExtResource( 1 )

[connection signal="animation_finished" from="." to="." method="_on_CutsceneAnimationPlayer_animation_finished"]
[connection signal="animation_started" from="." to="." method="_on_CutsceneAnimationPlayer_animation_started"]
